2006-11-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Test whether LIBPORT_WIN32 is defined when looking for WIN32.
        Because config.h's define might be prefixed by "LIBPORT_", we look for
        either LIBPORT_WIN32 or just WIN32.
	* lockable.hh,
	* semaphore.hh,
	* thread.hh,
	* utime.hh: Here.

2006-11-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Don't use LARGE_INTEGER. Use __int64 instead.
        See:
        http://msdn.microsoft.com/library/default.asp
         `-> ?url=/library/en-us/winprog/winprog/large_integer_str.asp
	This works for sure on mingw/cygwin and MSVC++ which is enough for us.
	* utime.hh: Here.

2006-11-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix includes.
	* lockable.hh: win32.h doesn't exist, include windows.h instead.
	* utime.hh: Be careful since _WIN32_WINNT can be already defined.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* hash.hh, tests/singleton2.cc, uffloat.hh,
	* ull-fixed-point.cc, ulong-fixed-point.hh: Run reindent.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Clean valgrind files
	* tests/Makefile.am (CLEANFILES): Here.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Improve win32 use
	* utime.hh: Include win32.
	Avoid cast using LARGE_INTEGER.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Fix the test suite
	* tests/Makefile.am: Create libport/config.h inside tests/.
	* tests/common_ufloat1.cc, tests/singleton1.cc, tests/udouble1.cc,
	* tests/udoubletab1.cc, tests/uffloat1.cc, tests/uffloattab1.cc,
	* tests/ufloat1.cc, tests/ufloattab1.cc, tests/ullfp1.cc,
	* tests/ullfptab1.cc:
	Prefix symbols by LIBPORT_ according to changes in libport.
	Check that we use tests/libport/config.h, not libport/config.h.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	test.sh is not to be shipped
	* tests/Makefile.am: Adjust.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Fix the tests
	* Makefile.am: Remove.